--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -167,7 +167,7 @@
   <ul id="top_nav">
     <li><a id="site-title">LGIR</a></li>
     <li><a class="active-link" style="padding-bottom: 10px;">Login</a></li>
-    <li style="float:right; user-select: none;"><a style="color: #888888;">lgirmini/0.9.7/19.04.21/19:07</a></li>
+    <li style="float:right; user-select: none;"><a style="color: #888888;">lgir/0.8.4/28.04.21/22:59</a></li>
   </ul>
 
   <div id = "main">
@@ -179,9 +179,9 @@
         <div class="grid-item">
 
             <div class="login-grid">
-                <h1 class="login-grid-title">Welcome to LGIR: <strong>Alpha</strong></h1>
+                <h1 class="login-grid-title">Welcome to LGIR: <strong>Beta</strong></h1>
                 <ul class="login-grid-messages">
-                    <li>LGIR is currently in Alpha</li>
+                    <li>LGIR is currently in Beta</li>
                     <li>The application is stateless, although cookies are used</li>
                     <li>Please log in using the details you were provided with</li>
                 </ul>
